# enviraldesign-3d-lab

./: .gitignore  README.md  local_image_to_3d.py  pyproject.toml
integrations/: README.md
integrations/FaithC/: LICENSE  README.md  pyproject.toml
integrations/FaithC/src/faithcontour/: api.py  encoder.py  ops.py  qef_solver.py
integrations/FaithC/src/faithcontour/_C/: bindings.cpp  kernels.cu  kernels.h
integrations/UltraShape-1.0/scripts/: infer_dit_refine.py
integrations/UltraShape-1.0/ultrashape/: pipelines.py
integrations/UltraShape-1.0/ultrashape/models/denoisers/: dit_mask.py
tools/: REMOTE_LIGHTNING.md  __init__.py  bootstrap.py  glb_viewer.html  lightning_bootstrap.sh  remote_launcher.py  roi_enhance.py  run_faithc.py  start_trellis2.ps1
trellis2/modules/: image_feature_extractor.py
trellis2/modules/attention/: full_attn.py
trellis2/pipelines/: trellis2_image_to_3d.py  trellis2_texturing.py
trellis2/pipelines/rembg/: BiRefNet.py
trellis2/trainers/flow_matching/mixins/: image_conditioned.py
